Cập nhập database, chức năng phản hồi lí do từ chối hồ sơ
